--- a/views/public/layout.jade
+++ b/views/public/layout.jade
@@ -9,7 +9,7 @@ html(lang="en")
 			include page/header
 			//every page starts with .container,
 			//no need to put on any other page
-			.container#main
+			.container#publicmain
 				block content
 		//footer.jade is copyright info, more links
 		include page/footer
