--- a/views/user/layout.jade
+++ b/views/user/layout.jade
@@ -18,7 +18,7 @@ html(lang="en")
 			if messages.success
 				.alert.alert-success
 					div= messages.success
-			.container#main
+			.container#usermain
 					block content
 		//footer.jade is copyright info, more links
 		include page/footer
