--- a/views/user/login.jade
+++ b/views/user/login.jade
@@ -24,10 +24,7 @@ block content
 						else
 							input.form-control#password(type="password", name="password")
 				.form-group
-					.col-sm-8.col-sm-offset-4
-						.checkbox
-							input(type="checkbox", name="userremember")
-							|Remember Me
-				.form-group
-					.col-sm-8.col-sm-offset-4
+					.col-sm-2.col-sm-offset-4
 						button.btn.btn-default(type="submit") Sign In
+					.col-sm-2
+						a.btn.btn-link(href="/user/forgot") Forgot Password
