--- a/views/public/page/footer.jade
+++ b/views/public/page/footer.jade
@@ -1,3 +1,11 @@
-#footer
+#publicfooter
+	hr
+	ul.list-inline.text-center
+		li 
+			a(href="/about") About
+		li
+			a(href="/contact") Contact 
+		li
+			a.i.fa.fa-facebook.text-primary(href='https://www.facebook.com/VeracityNU')
 	#copyright
 		p.text-muted.text-center: small Copyright &copy; 2014 Veracity Magazine. All rights reserved.
