--- a/views/user/admin/manage_users.jade
+++ b/views/user/admin/manage_users.jade
@@ -20,14 +20,14 @@ block content
 						tr
 							td
 								img.img-circle(src="/user/image/#{user._id}", width="28px")
-							td #{user.name.full}
-							td #{user.email}
+							td=user.name.full
+							td=user.email
 							td.role
-								a.btn-link(title='Edit role') #{user.role}
+								a.btn-link(title='Edit role')=user.role
 								.input-group.hidden
-									input.input-sm.form-control(value="#{user.role}")
+									input.input-sm.form-control(value=user.role)
 									span.input-group-btn
-										button.btn.btn-sm.btn-success.confirm(value="#{user._id}", title="Confirm")
+										button.btn.btn-sm.btn-success.confirm(value=user._id, title="Confirm")
 											span.glyphicon.glyphicon-ok
 										button.btn.btn-sm.btn-danger.cancel(title="Cancel")
 											span.glyphicon.glyphicon-remove
@@ -36,16 +36,20 @@ block content
 								td.text-center
 									span.glyphicon.glyphicon-ok
 								td
-									button.btn.btn-primary.btn-sm.demote(value='#{user._id}', title='Demote')
-										span.glyphicon.glyphicon-arrow-down
+									unless current._id.toString() == user._id.toString()
+										button.btn.btn-primary.btn-sm.demote(value=user._id, title='Demote')
+											span.glyphicon.glyphicon-arrow-down
 							else
 								td.text-center
 								td
-									button.btn.btn-info.btn-sm.promote(value='#{user._id}', title='Promote')
-										span.glyphicon.glyphicon-arrow-up
+									unless current._id.toString() == user._id.toString()
+										button.btn.btn-info.btn-sm.promote(value=user._id, title='Promote')
+											span.glyphicon.glyphicon-arrow-up
 							td
-								button.btn.btn-warning.btn-sm.reset(value='#{user._id}', title='Reset password')
-									span.glyphicon.glyphicon-lock
+								unless current._id.toString() == user._id.toString()
+									button.btn.btn-warning.btn-sm.reset(value=user._id, title='Reset password')
+										span.glyphicon.glyphicon-lock
 							td
-								button.btn.btn-danger.btn-sm.remove(value='#{user._id}', title='Delete user')
-									span.glyphicon.glyphicon-trash
+								unless current._id.toString() == user._id.toString()
+									button.btn.btn-danger.btn-sm.remove(value=user._id, title='Delete user')
+										span.glyphicon.glyphicon-trash
