--- a/views/user/page/header.jade
+++ b/views/user/page/header.jade
@@ -13,7 +13,7 @@ header
 						span.icon-bar
 				.collapse.navbar-collapse#bs-example-navbar-collapse-1
 					a.brand.pull-left(href="/user")
-						img.navlogo(alt="Brand",src="/images/logo.png")
+						img.navlogo(alt="Brand",src="/images/logo-noback.png")
 					if (loggedIn)
 						ul.nav.navbar-nav.pull-right
 							li: a(href='/user') Dashboard
