--- a/views/staff/login.jade
+++ b/views/staff/login.jade
@@ -1,11 +1,8 @@
-extends ./layout
+extends layout
 
 block content
 	.row.text-center
 		h1.col-sm-4.col-sm-offset-4=title
-		.col-sm-4.col-sm-offset-4
-			if (error)
-				.alert.alert-danger(role="alert")=error
 	.row
 		.col-sm-4.col-sm-offset-4.well
 			form.form-horizontal(enctype="multipart/form-data", role="form", action="/staff/login", method="post", name="login")
