--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -33,9 +33,6 @@ header {
 	text-align: center;
 	padding-bottom: 20px;
 }
-.navlogo {
-	height: 30px;
-}
 #logo {
 	text-align: center;
 	padding-top: 20px;
@@ -50,12 +47,13 @@ header {
 #topNav ul li {
 	font-size: 16px;
 }
-#topNav .navbar-nav > li > a {
-	padding-top: 5px !important;
-	padding-bottom: 5px !important;
-}
-#topNav .navbar {
-	min-height: 32px !important;
+/*#topNav .navbar-nav > li > a {
+	padding: 10px !important;
+}*/
+#topNav .navbar,
+.modal-header,
+.modal-footer {
+	/*min-height: 32px !important;*/
 	background: #eee !important;
 }
 .navbar-default {
@@ -74,6 +72,9 @@ header {
 	padding-right: 30px;
 	padding-left: 30px;  
 }
+
+.navbar-brand {padding:0 !important;}
+
 html, body {height: 100%;}
 
 #wrap {min-height: 100%;}
