--- a/views/public/page/head.jade
+++ b/views/public/page/head.jade
@@ -1,7 +1,7 @@
 meta(charset='utf-8')
 meta(http-equiv='X-UA-Compatible', content='IE=edge')
 meta(name='viewport', content='width=device-width, initial-scale=1')
-title= title
+title Veracity | #{title}
 link(href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css', rel='stylesheet')
 link(rel='stylesheet', href='/stylesheets/main.css')
 link(rel='stylesheet', href='/stylesheets/page.css')
