--- a/views/public/page/header.jade
+++ b/views/public/page/header.jade
@@ -2,11 +2,19 @@ header
 	#topNav
 		nav.navbar.navbar-default.navbar-static-top(role="navigation")
 			.container-fluid
-				.collapse.navbar-collapse
-					ul.nav.navbar-nav
-						li
-							a(href="/journey") Journey
-						li
-							a(href="/lifeandculture") Life &amp; Culture
-						li
-							a(href="/campus") Campus
+				if title != 'Home'
+					.navbar-header
+						button.navbar-toggle.collapsed(type="button", data-toggle="collapse", data-target="#main-nav")
+							span.sr-only Toggle navigation
+							span.icon-bar
+							span.icon-bar
+							span.icon-bar
+						a.navbar-brand(href="/")
+							img(alt="Brand" src="images/logo-noback.png" height="100%")
+					.collapse.navbar-collapse#main-nav
+						ul.nav.navbar-nav
+							li: a(href="/journey") Journey
+							li: a(href="/lifeandculture") Life &amp; Culture
+							li: a(href="/campus") Campus
+						ul.nav.navbar-right.navbar-nav
+							li: a(target="_blank", href="http://issuu.com/veracitymagazine/docs/veracity_final_issue1_") Magazine PDF
