--- a/views/staff/page/head.jade
+++ b/views/staff/page/head.jade
@@ -1,7 +1,7 @@
 meta(charset='utf-8')
 meta(http-equiv='X-UA-Compatible', content='IE=edge')
 meta(name='viewport', content='width=device-width, initial-scale=1')
-title=title
+title Veracity Staff | #{title}
 link(rel='stylesheet', href='/stylesheets/staff.css')
 link(rel='stylesheet', href='/stylesheets/admin.css')
 link(rel='stylesheet', href='/stylesheets/main.css')
