--- a/views/staff/upload_article.jade
+++ b/views/staff/upload_article.jade
@@ -11,6 +11,10 @@ block content
 				.col-sm-8
 					input#title.form-control(required, type="text", name="title")
 			.form-group
+				label.control-label.col-sm-2(for="#subtitle") Subtitle
+				.col-sm-8
+					input#subtitle.form-control(required, type="text", name="subtitle")
+			.form-group
 				label.control-label.col-sm-2(for="#myID") Author
 				.col-sm-2.text-center
 					input#myID(required, type="hidden", name="author", value=current._id)
@@ -39,10 +43,9 @@ block content
 						option Life &amp; Culture
 						option Vera in the City
 			.form-group
-				label.control-label.col-sm-2(for="#content") Body
+				label.control-label.col-sm-2(for="#body") Body
 				.col-sm-8
-					#body.form-control
-					input#content.form-control(required, type="hidden", name="body")
+					textarea#body.form-control(required, name="body")
 			.form-group
 				label.control-label.col-sm-2(for="#tags") Tags
 				.col-sm-4
@@ -54,6 +57,6 @@ block content
 						input#uploadPic(name='img', type='file')
 				.col-sm-4
 					p#imgName No file selected
-		.form-group
-			.col-sm-offset-2.col-sm-2
-				button#submit.btn.btn-primary(type="submit") Submit
+			.form-group
+				.col-sm-offset-2.col-sm-2
+					button#submit.btn.btn-primary(type="submit") Submit
