added console lines for upload article testing

--- a/views/staff/_change_password.jade
+++ b/views/staff/_change_password.jade
@@ -23,4 +23,4 @@
 							input.form-control#retypePass(required, data-required-msg='Please retype new password', type='password', name='retype')
 			.modal-footer
 				button.btn.btn-success#submitChange(type="button") Change
-				button.btn.btn-danger(type="button", data-dismiss="modal") Cancel
+				button.btn.btn-danger#cancelChange(type="button", data-dismiss="modal") Cancel
