disable things that aren't finished

--- a/views/public/page/header.jade
+++ b/views/public/page/header.jade
@@ -14,8 +14,8 @@ header
 				.collapse.navbar-collapse#main-nav
 					if title != 'Home'
 						ul.nav.navbar-nav
-							li: a(href="/journey") Journey
-							li: a(href="/lifeandculture") Life &amp; Culture
-							li: a(href="/campus") Campus
+							//- li: a(href="/journey") Journey
+							//- li: a(href="/lifeandculture") Life &amp; Culture
+							//- li: a(href="/campus") Campus
 					ul.nav.navbar-right.navbar-nav
 						li: a(target="_blank", href="http://issuu.com/veracitymagazine/docs/veracity_final_issue1_") Magazine PDF
