--- a/views/staff/page/header.jade
+++ b/views/staff/page/header.jade
@@ -16,12 +16,12 @@ header
 							ul.nav.navbar-nav.pull-right
 								li: a(href='/staff') Dashboard
 								li: a(href='/staff/uploadarticle') Upload article
-								li: a(href='/staff/myarticles') My articles
+								//- li: a(href='/staff/myarticles') My articles
 								if (admin)
 									li.dropdown
 										a.dropdown-toggle(href="#", data-toggle="dropdown", role="button", aria-expanded="false") Admin
 											span.caret
 										ul.dropdown-menu(role="menu")
 											li: a(href='/admin/manageusers') Manage users
-											li: a(href='/admin/reviewarticles') Review articles
+											//- li: a(href='/admin/reviewarticles') Review articles
 								li: a(href='/staff/logout') Log out
