--- a/views/staff/admin/_add_user.jade
+++ b/views/staff/admin/_add_user.jade
@@ -1,4 +1,4 @@
-.col-sm-10.col-sm-offset-1
+.col-sm-10.col-sm-offset-1.text-center
 	form#formAddUser.form-inline(enctype="multipart/form-data", name="adduser", method="post", action="/admin/adduser", role="form")
 		.form-group
 			label.sr-only(for="#inputFirst") Enter first name
