--- a/views/staff/forgot.jade
+++ b/views/staff/forgot.jade
@@ -2,9 +2,9 @@ extends layout
 
 block content
 	.row.text-center
-		h1.col-sm-4.col-sm-offset-4=title
+		h1.col-sm-6.col-sm-offset-3=title
 	.row
-		.col-sm-4.col-sm-offset-4.well
+		.col-md-4.col-md-offset-4.col-sm-6.col-sm-offset-3.col-xs-10.col-xs-offset-1.well
 			form.form-horizontal(enctype="multipart/form-data", role="form", method="post", name="reset")
 				.form-group
 					label.col-sm-2.col-sm-offset-1.control-label(for='email') Email
