--- a/views/staff/upload_article.jade
+++ b/views/staff/upload_article.jade
@@ -15,15 +15,15 @@ block content
 				.col-sm-8
 					input#subtitle.form-control(required, type="text", name="subtitle")
 			.form-group
-				label.control-label.col-sm-2(for="#myID") Author
-				.col-sm-2.text-center
-					input#myID(required, type="hidden", name="author", value=current._id)
+				label.control-label.col-sm-2.col-xs-2(for="#myID") Author
+				.col-md-3.col-sm-4.col-xs-6.text-center
+					input#myID(type="hidden", name="author", value=current._id)
 					p#myname=current.name.full
 				.col-sm-2
 					button#add.btn.btn-success(type="button", title="Add author")
 						span.glyphicon.glyphicon-plus 
 			.form-group.hidden
-				.col-sm-2.col-sm-offset-2
+				.col-md-3.col-sm-4.col-sm-offset-2.col-xs-6.col-xs-offset-2
 					select.form-control(name="author")
 						option(selected, disabled)
 						each user, i in userlist
@@ -33,7 +33,7 @@ block content
 						span.glyphicon.glyphicon-minus
 			.form-group
 				label.control-label.col-sm-2(for="#section") Section
-				.col-sm-3
+				.col-md-3.col-sm-4
 					select#section.form-control(required, name="section")
 						option(selected, disabled)
 						option Journey
@@ -45,18 +45,19 @@ block content
 			.form-group
 				label.control-label.col-sm-2(for="#body") Body
 				.col-sm-8
-					textarea#body.form-control(required, name="body")
+					textarea#body.form-control(name="body")
 			.form-group
 				label.control-label.col-sm-2(for="#tags") Tags
-				.col-sm-4
+				.col-md-3.col-sm-4
 					input#tags.form-control(required, type="text", name="tags", placeholder="Separate each tag with a comma")
 			.form-group
-				label.control-label.col-sm-2(for='#uploadPic') Photo
-				.col-sm-1
+				label.control-label.col-sm-2.col-xs-2(for='#uploadPic') Photo
+				.col-sm-1.col-xs-2
 					span.btn.btn-default.btn-file Browse
 						input#uploadPic(name='img', type='file')
-				.col-sm-4
+				.col-sm-4.col-xs-5
 					p#imgName No file selected
 			.form-group
-				.col-sm-offset-2.col-sm-2
-					button#submit.btn.btn-primary(type="submit") Submit
+				.col-sm-offset-2.col-sm-4
+					button#submit.btn.btn-primary(type="submit", value="published") Publish Now
+					button#draft.btn.btn-info(type="submit", value="draft") Save as Draft
