partway through fixing manage users to be more awesome

--- a/views/staff/_update_info.jade
+++ b/views/staff/_update_info.jade
@@ -7,7 +7,7 @@
 					span.sr-only Close
 				h4.modal-title Edit info
 			.modal-body
-				form.form-horizontal#infoForm(enctype="multipart/form-data", role="form", action="/staff/updateinfo", method="post", name="editInfo")
+				form.form-horizontal#infoForm(enctype="multipart/form-data", role="form", action="/util/updateinfo", method="post", name="editInfo")
 					.form-group
 						label.control-label.col-sm-2.col-xs-1(for='#firstName') First
 						.col-sm-3.col-xs-5
