--- a/views/staff/admin/manage_users.jade
+++ b/views/staff/admin/manage_users.jade
@@ -22,7 +22,7 @@ block content
 					each user, i in userlist
 						tr
 							td.hidden-xs
-								img.img-circle(src="/staff/image/#{user._id}", width="28px")
+								img.img-circle(src="/util/image/#{user._id}", width="28px")
 							td=user.name.full
 							td=user.email
 							td.role
