--- a/views/staff/dashboard.jade
+++ b/views/staff/dashboard.jade
@@ -16,7 +16,7 @@ block content
 	hr.col-md-10.col-md-offset-1.col-sm-12
 	.row
 		.col-md-3.col-md-offset-2.col-sm-4.col-sm-offset-1.col-xs-6.col-xs-offset-3
-			img.img-responsive.img-circle(src="/staff/image/#{user._id}")
+			img.img-responsive.img-circle(src="/util/image/#{user._id}")
 			br
 		.col-lg-3.col-lg-offset-2.col-md-4.col-md-offset-2.col-sm-6.col-sm-offset-1.col-xs-10.col-xs-offset-1
 			p
