will this fix what I broke?

--- a/views/staff/page/header.jade
+++ b/views/staff/page/header.jade
@@ -16,7 +16,7 @@ header
 							ul.nav.navbar-nav.pull-right
 								li: a(href='/staff') Dashboard
 								li: a(href='/staff/uploadarticle') Upload article
-								//- li: a(href='/staff/myarticles') My articles
+								li: a(href='/staff/myarticles') My articles
 								if (admin)
 									li.dropdown
 										a.dropdown-toggle(href="#", data-toggle="dropdown", role="button", aria-expanded="false") Admin
