--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -109,5 +109,50 @@ body:before {
 	height:100%;
 	float:left;
 	width:0;
-	margin-top:-32767px;/
+	margin-top:-32767px;
+}
+
+.article-img {
+	width:100%;
+	height:200px;
+	max-height:200px;
+  overflow:hidden;
+  border-radius:5px;
+}
+
+.article-tile {
+	min-height: 385px;
+	position: relative;
+}
+
+.full-width {
+	width: 100%;
+	position: absolute !important;
+	bottom: 0;
+}
+
+.full-width a,
+.full-width button {
+	width: 50%;
+	margin: 0;
+	background: #fff;
+	border: none;
+	border-radius: none;
+}
+
+.full-width a:hover,
+.full-width a:active,
+.full-width button:hover,
+.full-width button:active {
+	background: #eee;
+}
+
+.full-width .edit,
+.full-width .confirm {
+	border-bottom-left-radius: 5px;
+}
+
+.full-width .delete,
+.full-width .cancel {
+	border-bottom-right-radius: 5px;
 }
