i don't know where i am

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -131,8 +131,17 @@ body:before {
 	bottom: 0;
 }
 
-.full-width a,
-.full-width button {
+.full-width.options a,
+.full-width.options button {
+	width: 33%;
+	margin: 0;
+	background: #fff;
+	border: none;
+	border-radius: none;
+}
+
+.full-width.secondary a,
+.full-width.secondary button {
 	width: 50%;
 	margin: 0;
 	background: #fff;
