--- a/views/staff/dashboard.jade
+++ b/views/staff/dashboard.jade
@@ -2,21 +2,23 @@ extends ./layout
 
 block content
 	.row
-		h1.col-sm-8.col-sm-offset-1=title + ' : ' + user.name.full
 		#message
-		.col-sm-2
+		h1.col-sm-7.col-sm-offset-1.hidden-xs=title + ' : ' + user.name.full
+		h1.visible-xs.col-xs-6=title
+		.col-md-2.col-md-offset-1.col-sm-3.col-sm-offset-1.col-xs-4.col-xs-offset-2
 			ul.list-inline.pull-right
-				li: button#changePass.btn.btn-warning.btn-lg(value='#{user._id}', title='Change password', data-toggle="modal", data-target="#passModal")
+				li: button#changePass.btn.btn-warning.btn-lg.btn-circle(value='#{user._id}', title='Change password', data-toggle="modal", data-target="#passModal")
 					span.glyphicon.glyphicon-lock
-				li: button#editInfo.btn.btn-info.btn-lg(value='#{user._id}', title='Edit info', data-toggle="modal", data-target="#infoModal")
+				li: button#editInfo.btn.btn-info.btn-lg.btn-circle(value='#{user._id}', title='Edit info', data-toggle="modal", data-target="#infoModal")
 					span.glyphicon.glyphicon-pencil
 	include _update_info
 	include _change_password
-	hr.col-sm-10.col-sm-offset-1
+	hr.col-md-10.col-md-offset-1.col-sm-12
 	.row
-		.col-sm-3.col-sm-offset-2
-			img.img-responsive.img-circle(src="/staff/image/#{user._id}")
-		.col-sm-3.col-sm-offset-2
+		.col-md-3.col-md-offset-2.col-sm-4.col-sm-offset-1.col-xs-6.col-xs-offset-3
+			img.img-responsive.img-circle(src="/util/image/#{user._id}")
+			br
+		.col-lg-3.col-lg-offset-2.col-md-4.col-md-offset-2.col-sm-6.col-sm-offset-1.col-xs-10.col-xs-offset-1
 			p
 				strong Email: 
 				| #{user.email}
