--- a/views/staff/page/head.jade
+++ b/views/staff/page/head.jade
@@ -1,6 +1,6 @@
 meta(charset='utf-8')
 meta(http-equiv='X-UA-Compatible', content='IE=edge')
-meta(name='viewport', content='width=device-width, initial-scale=1')
+meta(name='viewport', content='width=device-width, initial-scale=1, user-scalable=no')
 title Veracity Staff | #{title}
 link(rel='stylesheet', href='/stylesheets/staff.css')
 link(rel='stylesheet', href='/stylesheets/admin.css')
@@ -8,6 +8,7 @@ link(rel='stylesheet', href='/stylesheets/main.css')
 link(rel='stylesheet', href='/stylesheets/page.css')
 link(rel="stylesheet", href="/bootstrap3-wysiwyg/dist/bootstrap3-wysihtml5.min.css")
 link(href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css', rel='stylesheet')
+link(rel='stylesheet', href='/stylesheets/bootstrap.css')
 link(href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css", rel="stylesheet")
 // if lt IE 9
 	script(src='https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js')
