--- a/views/public/page/logo.jade
+++ b/views/public/page/logo.jade
@@ -14,8 +14,8 @@
 			.collapse.navbar-collapse#bs-example-navbar-collapse-2
 				ul.nav.navbar-nav
 					li
-						a(href="/journey") Journey
+						a(href="/mag/journey") Journey
 					li
-						a(href="/lifeandculture") Life &amp; Culture
+						a(href="/mag/lifeandculture") Life &amp; Culture
 					li
-						a(href="/campus") Campus
+						a(href="/mag/campus") Campus
