--- a/views/staff/article_form.jade
+++ b/views/staff/article_form.jade
@@ -46,7 +46,7 @@ block content
 						option(selected=(article.section == 'Journey')) Journey
 						option(selected=(article.section == 'Bloom')) Bloom
 						option(selected=(article.section == 'Campus')) Campus
-						option(selected=(article.section == 'Gray Area')) Gray Area
+						option(selected=(article.section == 'Gray Areas')) Gray Area
 						option(selected=(article.section == 'Life & Culture')) Life &amp; Culture
 						option(selected=(article.section == 'Vera in the City')) Vera in the City
 			.form-group
