--- a/views/public/article.jade
+++ b/views/public/article.jade
@@ -1,11 +1,20 @@
 extends index.jade
 block content
-	#article
-		h1.storyTitle
-			TITLE GOES HERE
-	#storyPic
-		img.img-responsive.center-block(src="/images/300x200.jpg", alt="...")
-	#story
-		p.subhead SUBHEAD SUBHEAD
-		p.byline BYLINE 
-		p.story TEXT TEXT TEXT
+	.row
+		h1.col-sm-8.col-sm-offset-1.storyTitle=title
+		h2.col-sm-8.col-sm-offset-1.subhead
+			small=article.subtitle
+	.row
+		p.col-sm-2.col-sm-offset-1.byline By
+			case authorlist.length
+				when 1
+					span=authorlist[0]
+				when 2
+					span=authorlist.split(', ')
+	if img
+		.row
+			.col-sm-4.col-sm-offset-1
+				img.img-responsive(src="/util/articleimage/#{article._id}")
+	br
+	.row
+		.col-sm-8.col-sm-offset-1!=article.body
