--- a/views/public/page/header.jade
+++ b/views/public/page/header.jade
@@ -10,12 +10,12 @@ header
 							span.icon-bar
 							span.icon-bar
 						a.navbar-brand(href="/")
-							img(alt="Brand" src="images/logo-noback.png" height="100%")
+							img(alt="Brand" src="/images/logo-noback.png" height="100%")
 				.collapse.navbar-collapse#main-nav
 					if title != 'Home'
 						ul.nav.navbar-nav
-							//- li: a(href="/journey") Journey
-							//- li: a(href="/lifeandculture") Life &amp; Culture
-							//- li: a(href="/campus") Campus
+							li: a(href="/mag/journey") Journey
+							li: a(href="/mag/lifeandculture") Life &amp; Culture
+							li: a(href="/mag/campus") Campus
 					ul.nav.navbar-right.navbar-nav
 						li: a(target="_blank", href="http://issuu.com/veracitymagazine/docs/veracity_final_issue1_") Magazine PDF
