--- a/views/public/section.jade
+++ b/views/public/section.jade
@@ -1,36 +1,45 @@
 extends ./index.jade
 block content
-	h1=section_title
+	.section-header.title
+			h1
+				span=title
 	#stories
 		.row
 			.col-xs-12.col-md-8
 				.row
 					.col-md-12.featured
-						.thumbnail
-							a(href="article/#{featured._id}") 
-								img(src="/index/image/#{featured._id}")
-							.caption
-								h4 #{featured.title}
-								p #{featured.subtitle}
-								p
-									a(href="article/#{featured._id}") read more
+						a(href="#{urlsection}/#{featured._id}") 
+							.thumbnail
+								img.col-lg-8.img-responsive.img-rounded(src="/util/articleimage/#{featured._id}")
+								.caption.col-lg-4
+									h4 #{featured.title}
+									p #{featured.subtitle}
+									- var date = new Date(featured.update_time)
+									time.timeago(datetime=date.toISOString())
+				hr
 				.row
 					each article, i in articlelist
 						.col-md-6
-							.thumbnail
-								a(href="article/#{article._id}") 
-									img(src="/index/image/#{article._id}")
-								.caption
-									h4 #{article.title}
-									p #{article.subtitle}
-									p
-										a(href="article/#{article._id}") read more
+							a(href="#{urlsection}/#{article._id}")
+								.thumbnail 
+									img.img-responsive.img-rounded(src="/util/articleimage/#{article._id}")
+									.caption.col-xs-12
+										h4 #{article.title}
+										p #{article.subtitle}
+										- var date = new Date(article.update_time)
+										time.timeago(datetime=date.toISOString())
 			.col-xs-12.col-md-4
-				h3=sub_section_title
-				.thumbnail
-					a(href="article/#{sidebar._id}") 
-						img(src="/index/image/#{sidebar._id}")
-					.caption
-						p #{sidebar.subtitle}
-						p
-							a(href="article/#{sidebar._id}") read more
+				case title
+					when 'Journey'
+						img.img-responsive.img-rounded(src="/images/bloom.png", alt="Bloom")
+					when 'Campus'
+						img.img-responsive.img-rounded(src="/images/grayareas.png", alt="Gray Areas")
+					when 'Life & Culture'
+						img.img-responsive.img-rounded(src="/images/verainthecity.png", alt="Vera in the City")
+				a(href="#{urlsection}/#{sidebar._id}") 
+					.thumbnail
+						.caption.col-xs-12
+							p #{sidebar.title}
+							p #{sidebar.subtitle}
+							- var date = new Date(sidebar.update_time)
+							time.timeago(datetime=date.toISOString())
