--- a/views/public/index.jade
+++ b/views/public/index.jade
@@ -1,99 +1,53 @@
 extends layout
 block content
 	include page/logo
-	//- #myCarousel.carousel.slide(data-ride="carousel")
-	//- 	ol.carousel-indicators
-	//- 		li.active(data-target="#myCarousel", data-slide-to="0")
-	//- 		li(data-target="#myCarousel", data-slide-to="1")
-	//- 		li(data-target="#myCarousel", data-slide-to="2")
-	//- 	.carousel-inner
-	//- 		.item.active
-	//- 			img(src="/images/1200x400.jpg", alt="First Slide")
-	//- 			.carousel-caption
-	//- 				h1 Example headline #1
-	//- 				p First slide
-	//- 		.item
-	//- 			img(src="/images/1200x400.jpg", alt="Second Slide")
-	//- 			.carousel-caption
-	//- 				h1 Example headline #2
-	//- 				p Second slide
-	//- 		.item
-	//- 			img(src="/images/1200x400.jpg", alt="Third Slide")
-	//- 			.carousel-caption
-	//- 				h1 Example headline #3
-	//- 				p Whatever you want
-	//- 	a.left.carousel-control(href="#myCarousel", role="button", data-slide="prev")
-	//- 		span.glyphicon.glyphicon-chevron-left
-	//- 	a.right.carousel-control(href="#myCarousel", role="button", data-slide="next")
-	//- 		span.glyphicon.glyphicon-chevron-right
-	//- hr
-	//- .row
-	//- 	h3 Featured Stories
-	//- #stories
-	//- 	.row
-	//- 		.col-md-6.col-md-4
-	//- 			.thumbnail
-	//- 				a(href="#") 
-	//- 					img(src="/images/300x200.jpg", alt="...")
-	//- 				.caption
-	//- 					h6 Issue One / Journey
-	//- 					h4.storyTitle TITLE title
-	//- 					p.subhead SUBHEAD subhead subhead
-	//- 					p.byline BYLINE byline
-	//- 					p
-	//- 						a(href="#") read more
-	//- 		.col-md-6.col-md-4
-	//- 			.thumbnail
-	//- 				a(href="#") 
-	//- 					img(src="/images/300x200.jpg", alt="...")
-	//- 				.caption
-	//- 					h6 Issue One / Journey
-	//- 					h4.storyTitle TITLE title
-	//- 					p.subhead SUBHEAD subhead subhead
-	//- 					p.byline BYLINE byline
-	//- 					p
-	//- 						a(href="#") read more
-	//- 		.col-md-6.col-md-4
-	//- 			.thumbnail
-	//- 				a(href="#") 
-	//- 					img(src="/images/300x200.jpg", alt="...")
-	//- 				.caption
-	//- 					h6 Issue One / Journey
-	//- 					h4.storyTitle TITLE title
-	//- 					p.subhead SUBHEAD subhead subhead
-	//- 					p.byline BYLINE byline
-	//- 					p
-	//- 						a(href="#") read more
-	//- 		.col-md-6.col-md-4
-	//- 			.thumbnail
-	//- 				a(href="#") 
-	//- 					img(src="/images/300x200.jpg", alt="...")
-	//- 				.caption
-	//- 					h6 Issue One / Journey
-	//- 					h4.storyTitle TITLE title
-	//- 					p.subhead SUBHEAD subhead subhead
-	//- 					p.byline BYLINE byline
-	//- 					p
-	//- 						a(href="#") read more
-	//- 		.col-md-6.col-md-4
-	//- 			.thumbnail
-	//- 				a(href="#") 
-	//- 					img(src="/images/300x200.jpg", alt="...")
-	//- 				.caption
-	//- 					h6 Issue One / Journey
-	//- 					h4.storyTitle TITLE title
-	//- 					p.subhead SUBHEAD subhead subhead
-	//- 					p.byline BYLINE byline
-	//- 					p
-	//- 						a(href="#") read more
-	//- 		.col-md-6.col-md-4
-	//- 			.thumbnail
-	//- 				a(href="#") 
-	//- 					img(src="/images/300x200.jpg", alt="...")
-	//- 				.caption
-	//- 					h6 Issue One / Journey
-	//- 					h4.storyTitle TITLE title
-	//- 					p.subhead SUBHEAD subhead subhead
-	//- 					p.byline BYLINE byline
-	//- 					p
-	//- 						a(href="#") read more
+	#myCarousel.carousel.slide(data-ride="carousel")
+		ol.carousel-indicators
+			li.active(data-target="#myCarousel", data-slide-to="0")
+			li(data-target="#myCarousel", data-slide-to="1")
+			li(data-target="#myCarousel", data-slide-to="2")
+		.carousel-inner
+			.item.active
+				img(src="/util/articleimage/#{carousel[0]._id}", alt=carousel[0].title)
+				a(href="/mag/#{carousel[0].section}/#{carousel[0]._id}")
+					.carousel-caption
+						h1=carousel[0].title
+						p=carousel[0].subtitle
+			.item
+				img(src="/util/articleimage/#{carousel[1]._id}", alt=carousel[1].title)
+				a(href="/mag/#{carousel[1].section}/#{carousel[1]._id}")
+						.carousel-caption
+							h1=carousel[1].title
+							p=carousel[1].subtitle
+			.item
+				img(src="/util/articleimage/#{carousel[2]._id}", alt=carousel[2].title)
+				a(href="/mag/#{carousel[2].section}/#{carousel[2]._id}")
+					.carousel-caption
+						h1=carousel[2].title
+						p=carousel[2].subtitle
+		a.left.carousel-control(href="#myCarousel", role="button", data-slide="prev")
+			span.glyphicon.glyphicon-chevron-left
+		a.right.carousel-control(href="#myCarousel", role="button", data-slide="next")
+			span.glyphicon.glyphicon-chevron-right
+	hr
+	.row
+		h3 Featured Stories
+	#stories
+		.row
+			each article, i in articlelist 
+				.col-md-6.col-md-4
+					.thumbnail.article-thumbnail
+						a(href="/mag/#{article.section}/#{article._id}") 
+							img.img-responsive.img-rounded(src="/util/articleimage/#{article._id}", alt=article.title)
+							.caption.col-xs-12
+								h6=article.section
+								h4.storyTitle=article.title
+								p.subhead=article.subtitle
+								p.byline By 
+									case articleauthors[i].length
+										when 1
+											| #{articleauthors[i][0]}
+										default
+											| #{articleauthors[i].split(', ')}
+								- var date = new Date(article.update_time)
+								p=date.toDateString()
