--- a/views/public/page/jsdefaults.jade
+++ b/views/public/page/jsdefaults.jade
@@ -2,5 +2,5 @@
 script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js")
 script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js")
 <!-- Include all compiled plugins (below), or include individual files as needed -->
+script(src="/javascripts/timeago.js")
 link(href='/javascripts/carousel.js')
-link(href='/javascripts/section.js')
