--- a/public/stylesheets/page.css
+++ b/public/stylesheets/page.css
@@ -29,6 +29,10 @@ h1 {
 .byline {
 	font-family: 'Bebas Neue'; 
 }
-.story {
-	font-family: 'Minion Pro';
+.story p,
+.story span {
+	font-family: 'Verlag Book' !important;
+	font-size: 14px !important;
+	line-height: 20px !important;
+	color: rgb(102, 102, 102) !important;
 }
