--- a/views/public/article.jade
+++ b/views/public/article.jade
@@ -5,7 +5,7 @@ block content
 		h2.col-sm-8.col-sm-offset-1.subhead
 			small=article.subtitle
 	.row
-		p.col-sm-2.col-sm-offset-1.byline By
+		p.col-sm-2.col-sm-offset-1.byline By 
 			case authorlist.length
 				when 1
 					| #{authorlist[0]}
@@ -17,4 +17,4 @@ block content
 				img.img-responsive(src="/util/articleimage/#{article._id}")
 	br
 	.row
-		.col-sm-8.col-sm-offset-1!=article.body
+		.col-sm-8.col-sm-offset-1.story!=article.body
