--- a/views/public/_article_card.jade
+++ b/views/public/_article_card.jade
@@ -1,11 +1,18 @@
 a(href="mag/#{article.section}/#{article._id}") 
 	.article-img.text-center
-		img.img-responsive.img-rounded(src="/image/#{article._id}", alt="#{article.title}")
+		img.img-responsive.img-rounded(src="/util/articleimage/#{article._id}", alt="#{article.title}")
 .caption
 	h6=article.section
 	h4 #{article.title} 
 		if (article.status == 'draft')
 			small  (#{article.status})
 	p=article.subtitle
+	if (articleauthors)
+		p.byline By 
+			case articleauthors[i].length
+				when 1
+					| #{articleauthors[i][0]}
+				default
+					| #{articleauthors[i].split(', ')}
 	- var date = new Date(article.update_time)
 	p=date.toDateString()
