changes to article responsiveness & staff added to 'about' page

--- a/views/public/about.jade
+++ b/views/public/about.jade
@@ -1,4 +1,50 @@
 extends index.jade
 block content
+	link(rel='stylesheet', href='/stylesheets/about-staff.css')
+	
 	h1 About Us
 	p Veracity Magazine strives to be a relevant publication that represents the college generation of Christian viewpoints, challenging them to rethink faith in life and culture, build campus-wide community, and serve as a resource for those seeking to learn more about the Christian faith. Above all, we recognize that a personal relationship with Jesus Christ is the foremost motivating foundation for all dialogue.
+	hr
+	h2 Staff
+	br
+	#staff-thumbnails
+		.col-xs-6.col-sm-4.col-md-3
+			img.staff-pic(src="/images/NoahConley.png", alt="...")
+			p
+				b Staff Name | Position
+			p.staff-bio brief bio blah blah blah 
+		.col-xs-6.col-sm-4.col-md-3
+			img.staff-pic(src="/images/NoahConley.png", alt="...")
+			p
+				b Staff Name | Position
+			p.staff-bio brief bio blah blah blah 
+		.col-xs-6.col-sm-4.col-md-3
+			img.staff-pic(src="/images/NoahConley.png", alt="...")
+			p
+				b Staff Name | Position
+			p.staff-bio brief bio blah blah blah 
+		.col-xs-6.col-sm-4.col-md-3
+			img.staff-pic(src="/images/NoahConley.png", alt="...")
+			p
+				b Staff Name | Position
+			p.staff-bio brief bio blah blah blah
+		.col-xs-6.col-sm-4.col-md-3
+			img.staff-pic(src="/images/NoahConley.png", alt="...")
+			p
+				b Staff Name | Position
+			p.staff-bio brief bio blah blah blah
+		.col-xs-6.col-sm-4.col-md-3
+			img.staff-pic(src="/images/NoahConley.png", alt="...")
+			p
+				b Staff Name | Position
+			p.staff-bio brief bio blah blah blah
+		.col-xs-6.col-sm-4.col-md-3
+			img.staff-pic(src="/images/NoahConley.png", alt="...")
+			p
+				b Staff Name | Position
+			p.staff-bio brief bio blah blah blah
+		.col-xs-6.col-sm-4.col-md-3
+			img.staff-pic(src="/images/NoahConley.png", alt="...")
+			p
+				b Staff Name | Position
+			p.staff-bio brief bio blah blah blah
