--- a/views/public/index.jade
+++ b/views/public/index.jade
@@ -35,11 +35,11 @@ block content
 	#stories
 		.row
 			each article, i in articlelist 
-				.col-md-6.col-md-4
+				.col-xs-6.col-sm-6.col-md-4
 					.thumbnail.article-thumbnail
 						a(href="/mag/#{article.section}/#{article._id}") 
 							img.img-responsive.img-rounded(src="/util/articleimage/#{article._id}", alt=article.title)
-							.caption.col-xs-12
+							.caption
 								h6=article.section
 								h4.storyTitle=article.title
 								p.subhead=article.subtitle
