--- a/views/public/journey.jade
+++ b/views/public/journey.jade
@@ -5,66 +5,81 @@ block content
 			h1
 				span Journey
 	#stories
+		extends layout
+block content
+	#journey
+		.section-header.title
+			h1
+				span Journey
+	#stories
 		.row
-			.col-xs-12.col-md-8
-				.row
-					.col-md-12
-						.thumbnail
-							a(href="#") 
-								img(src="/images/300x200.jpg", alt="...")
-							.caption
-								h6 Issue One / Journey
-								h4 story number 1 title goes here
-								p blah blah blah 
-								p
-									a(href="#") read more.row
-					.col-md-6
-						.thumbnail
-							a(href="#") 
-								img(src="/images/300x200.jpg", alt="...")
-							.caption
-								h6 Issue One / Journey
-								h4 story number 1 title goes here
-								p blah blah blah 
-								p
-									a(href="#") read more
-					.col-md-6
-						.thumbnail
-							a(href="#") 
-								img(src="/images/300x200.jpg", alt="...")
-							.caption
-								h6 Issue One / Journey
-								h4 story number 1 title goes here
-								p blah blah blah 
-								p
-									a(href="#") read more
-				.row
-					.col-md-6
-						.thumbnail
-							a(href="#") 
-								img(src="/images/300x200.jpg", alt="...")
-							.caption
-								h6 Issue One / Journey
-								h4 story number 1 title goes here
-								p blah blah blah 
-								p
-									a(href="#") read more
-					.col-md-6
-						.thumbnail
-							a(href="#") 
-								img(src="/images/300x200.jpg", alt="...")
-							.caption
-								h6 Issue One / Journey
-								h4 story number 1 title goes here
-								p blah blah blah 
-								p
-									a(href="#") read more
-			.col-xs-12.col-md-4
-				.thumbnail
-					a(href="#") 
-						img.img-responsive(src="/images/bloom.png", alt="...")
-					.caption
-						h4 Bloom
+			.col-xs-12.col-sm-12.col-md-8
+				.col-xs-6.col-sm-4.col-md-3
+					.article-pic.img-responsive
+						a(href="#") 
+							img(src="/images/300x200.jpg", alt="...")
+					.article-caption
+						h6 Issue One / Journey
+						h4 story number 1 title goes here
 						p blah blah blah 
 						p
-							a(href="#") read more
+							a(href="#") read more.row
+				.col-xs-6.col-sm-4.col-md-3
+					.article-pic.img-responsive
+						a(href="#") 
+							img(src="/images/300x200.jpg", alt="...")
+					.article-caption
+						h6 Issue One / Journey
+						h4 story number 1 title goes here
+						p blah blah blah 
+						p
+							a(href="#") read more.row
+				.col-xs-6.col-sm-4.col-md-3
+					.article-pic.img-responsive
+						a(href="#") 
+							img(src="/images/300x200.jpg", alt="...")
+					.article-caption
+						h6 Issue One / Journey
+						h4 story number 1 title goes here
+						p blah blah blah 
+						p
+							a(href="#") read more.row
+				.col-xs-6.col-sm-4.col-md-3
+					.article-pic.img-responsive
+						a(href="#") 
+							img(src="/images/300x200.jpg", alt="...")
+					.article-caption
+						h6 Issue One / Journey
+						h4 story number 1 title goes here
+						p blah blah blah 
+						p
+							a(href="#") read more.row
+				.col-xs-6.col-sm-4.col-md-3
+					.article-pic.img-responsive
+						a(href="#") 
+							img(src="/images/300x200.jpg", alt="...")
+					.article-caption
+						h6 Issue One / Journey
+						h4 story number 1 title goes here
+						p blah blah blah 
+						p
+							a(href="#") read more.row
+				.col-xs-6.col-sm-4.col-md-3
+					.article-pic.img-responsive
+						a(href="#") 
+							img(src="/images/300x200.jpg", alt="...")
+					.article-caption
+						h6 Issue One / Journey
+						h4 story number 1 title goes here
+						p blah blah blah 
+						p
+							a(href="#") read more.row
+			.col-xs-12.col-sm-12.col-md-4
+				.article-pic.img-responsive
+					a(href="#") 
+						img.img-responsive(src="/images/bloom.png", alt="...")
+				.article-caption
+					h4 Bloom
+					p blah blah blah 
+					p
+						a(href="#") read more
