--- a/views/public/section.jade
+++ b/views/public/section.jade
@@ -10,8 +10,8 @@ block content
 					.col-md-12.featured
 						a(href="#{urlsection}/#{featured._id}") 
 							.thumbnail
-								img.col-lg-8.img-responsive.img-rounded(src="/util/articleimage/#{featured._id}")
-								.caption.col-lg-4
+								img.img-responsive.img-rounded(src="/util/articleimage/#{featured._id}")
+								.caption
 									h4 #{featured.title}
 									p #{featured.subtitle}
 									p.byline By 
@@ -25,11 +25,11 @@ block content
 				hr
 				.row
 					each article, i in articlelist
-						.col-md-6.article-thumbnail
+						.col-xs-6.col-sm-6.col-md-6.article-thumbnail
 							a(href="#{urlsection}/#{article._id}")
 								.thumbnail 
 									img.img-responsive.img-rounded(src="/util/articleimage/#{article._id}")
-									.caption.col-xs-12
+									.caption
 										h4 #{article.title}
 										p #{article.subtitle}
 										p.byline By 
