--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -195,7 +195,7 @@ body:before {
 	border-bottom-left-radius: 5px;
 }
 
-.full-width .delete,
+.full-width .delete,m
 .full-width .cancel {
 	border-bottom-right-radius: 5px;
 }
