small article edits

--- a/views/public/_article_card.jade
+++ b/views/public/_article_card.jade
@@ -1,4 +1,4 @@
-a(href="mag/#{article.section}/#{article._id}") 
+a(href="/mag/#{article.section}/#{article._id}") 
 	.article-img.text-center
 		img.img-responsive.img-rounded(src="/util/articleimage/#{article._id}", alt="#{article.title}")
 .caption
